--- a/codecuaViet/index.html
+++ b/codecuaViet/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- thẻ header-->
     <div class="header">
         <h1 class="title">Hi, I'm Viet Tran</h1>
         <div class="profilePic">
@@ -36,13 +37,16 @@
     </div>
 
 
-
+    <!-- thẻ spotify-->
     <div id="spotify">
         <iframe style="border-radius:12px"
             src="https://open.spotify.com/embed/playlist/54MWiuWapS4cmUGxaD3ncS?utm_source=generator" width="100%"
             height="352" frameBorder="0" allowfullscreen=""
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
+
+
+    <!-- thẻ footer-->
     <footer>
         <div class="social-icons">
             <div id="icon-container">
